# FMI-OOP-2023

streamsTasks/: task0.cpp  task1.cpp  task2.cpp  task4.cpp
week02/: CMakeLists.txt  main.cpp
week7/: CMakeLists.txt  main.cpp
week7/Task 0/: Temperature.cpp  Temperature.h
week7/Task1/: Forecast.cpp  Forecast.h
week7/Task2/: Queue.cpp  Queue.h  Ticket.cpp  Ticket.h
week7/Task3/: Backpack.cpp  Backpack.h  Item.cpp  Item.h
week8/: CMakeLists.txt  main.cpp
week8/Commander/: Commander.cpp  Commander.h
week8/General/: General.cpp  General.h
week8/Soldier/: Soldier.cpp  Soldier.h
